# football-odds-lab

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: PHASE0B_VALUE_BETTING_METHODOLOGY.md  PHASE0_METHODOLOGY.md  PHASE1_BASELINE_MODEL_PLAN.md  PHASE1_CONCLUSION.md  PHASE1_LINE_MOVEMENT_SIGNAL_METHODOLOGY.md  PHASE2_DATA_SOURCE_SELECTION.md  PHASE2_EV_METHODOLOGY.md  PHASE2_SOURCE_SPIKE_PLAN.md  PHASE3_BETFAIR_EXCHANGE_SPIKE_PLAN.md  PHASE3_INJURY_SPIKE_PLAN.md  PRD.md  RESEARCH_RESET.md
scripts/: run_phase0_clv_test.py  run_phase0b_value_betting_test.py  run_phase1_baseline_model.py  run_phase1_diagnostic.py  run_phase2_decision_snapshot_fetch.py  run_phase2_ev_backtest.py  run_phase2_source_spike.py  run_phase3_injury_spike.py  run_shin_devig_robustness_check.py
src/football_odds_lab/: __init__.py
src/football_odds_lab/analysis/: baseline_verdict.py  betting_stats.py  classification_metrics.py  clv_hypothesis.py  decision_snapshot_extraction.py  decision_timestamps.py  ev_backtest.py  (+9 more)
tests/: test_api_football.py  test_baseline_verdict.py  test_betting_stats.py  test_classification_metrics.py  test_clv_hypothesis.py  test_decision_snapshot_extraction.py  test_decision_timestamps.py  test_entity_matching.py  test_ev_backtest.py  test_ev_candidate_price.py  test_line_movement_baselines.py  test_line_movement_features.py  test_line_movement_preprocessing.py  test_line_movement_target.py  test_odds_math.py  test_phase1_dataset.py  test_the_odds_api.py  test_value_betting_hypothesis.py  test_walk_forward.py
(+4 files in other folders)
