[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "football-odds-lab"
version = "0.1.0"
description = "Phase 0 research: football value-betting CLV hypothesis — analytics only"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "requests>=2.32",
    "scikit-learn>=1.5",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/football_odds_lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
